--- a/SemestralnaPraca1.vcxproj
+++ b/SemestralnaPraca1.vcxproj
@@ -222,6 +222,9 @@
     <ClInclude Include="structures\vector\vector.h" />
     <ClInclude Include="Vozidlo.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Natvis Include="structures\aus.natvis" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
