--- a/SemestralnaPraca1.vcxproj.filters
+++ b/SemestralnaPraca1.vcxproj.filters
@@ -260,5 +260,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram.cd" />
+    <None Include="ClassDiagram1.cd" />
   </ItemGroup>
 </Project>
